--- a/src/app/details/story-details/story-details.html
+++ b/src/app/details/story-details/story-details.html
@@ -60,6 +60,17 @@
                 </div>
             </div>
         </section>
+        
+        <!-- Story Timeline Section -->
+        <section class="details-section primary-section vertical-section">
+            <app-timeline 
+                [events]="filteredEventList" 
+                [title]="'Events in ' + (worldStory?.title || '')"
+                [noResultsMessage]="'No events found for this story'"
+                (tagClicked)="onTimelineTagClicked($event)">
+            </app-timeline>
+        </section>
+        
         <button type="submit" class="save-button primary">Save</button>
     </form>
 </article>
