--- a/src/app/details/event-details/event-details.html
+++ b/src/app/details/event-details/event-details.html
@@ -1,8 +1,8 @@
+<section class="details-heading">
+    <h2 class="event-title">{{ worldEvent?.name }}</h2>
+    <button class="delete-button secondary" (click)="deleteEvent()">Delete Event</button>
+</section>
 <article>
-    <section class="details-heading horizontal-section">
-        <h2 class="event-title">{{ worldEvent?.name }}</h2>
-        <button class="delete-button secondary" (click)="deleteEvent()">Delete Event</button>
-    </section>
     <form [formGroup]="applyForm" (submit)="submitApplication()">
         <section class="edit-event-form event-page-body">
             <div class="details-section primary-section horizontal-section">
@@ -21,6 +21,19 @@
                             }
                         </select>
                         <input id="event-day" type="number" formControlName="eventDay" placeholder="Day" min="1" max="31" />
+                    </div>
+                </div>
+                <div class="details-section secondary-section">
+                    <label class="primary-label">End Date (Optional)</label>
+                    <div class="date-selector">
+                        <input id="event-end-year" type="number" formControlName="eventEndYear" placeholder="Year" min="1800" max="3000" />
+                        <select id="event-end-month" formControlName="eventEndMonth">
+                            <option value="">Month</option>
+                            @for (month of months; track month) {
+                                <option value="{{ month }}">{{ month }}</option>
+                            }
+                        </select>
+                        <input id="event-end-day" type="number" formControlName="eventEndDay" placeholder="Day" min="1" max="31" />
                     </div>
                 </div>
             </div>
