--- a/src/app/details/event-details/event-details.html
+++ b/src/app/details/event-details/event-details.html
@@ -47,43 +47,28 @@
             
             <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="event-location">Location</label>
-                    <div class="vertical-section">
-                        @for(location of locationList; track location) {
-                            <div class="form-field">
-                                <input type="checkbox" id="location-checkbox-{{location.id}}" [value]="location.id" (change)="onLocationChange($event, location)" [checked]="isLocationInEvent(location.name)" />
-                                <button class="linked-location" [routerLink]="['/location', location.id]" type="button">
-                                    <label class="secondary-label">{{ location.name }}</label>
-                                </button>
-                            </div>
-                        }
-                    </div>
+                    <app-association-list
+                        [items]="getLocationsAssociationList()"
+                        [label]="'Location'"
+                        [type]="'location'"
+                        (itemToggled)="onLocationToggle($event)">
+                    </app-association-list>
                 </div>
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="event-stories">Stories</label>
-                    <div class="vertical-section">
-                        @for(story of storyList; track story) {
-                            <div class="form-field">
-                                <input type="checkbox" id="story-checkbox-{{story.id}}" [value]="story.id" (change)="onStoryChange($event, story)" [checked]="isStoryInEvent(story.title)" />
-                                <button class="linked-story" [routerLink]="['/story', story.id]" type="button">
-                                    <label class="secondary-label">{{ story.title }}</label>
-                                </button>
-                            </div>
-                        }
-                    </div>
+                    <app-association-list
+                        [items]="getStoriesAssociationList()"
+                        [label]="'Stories'"
+                        [type]="'story'"
+                        (itemToggled)="onStoryToggle($event)">
+                    </app-association-list>
                 </div>
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="event-characters">Characters</label>
-                    <div class="vertical-section">
-                        @for(character of characterList; track character) {
-                            <div class="form-field">
-                                <input type="checkbox" id="character-checkbox-{{character.id}}" [value]="character.id" (change)="onCharacterChange($event, character)" [checked]="isCharacterInEvent(character.firstName + ' ' + character.lastName)" />
-                                <button class="linked-character" [routerLink]="['/character', character.id]" type="button">
-                                    <label class="secondary-label">{{ character.firstName }} {{ character.lastName }}</label>
-                                </button>
-                            </div>
-                        }
-                    </div>
+                    <app-association-list
+                        [items]="getCharactersAssociationList()"
+                        [label]="'Characters'"
+                        [type]="'character'"
+                        (itemToggled)="onCharacterToggle($event)">
+                    </app-association-list>
                 </div>
             </div>
             
