--- a/src/app/details/story-details/story-details.html
+++ b/src/app/details/story-details/story-details.html
@@ -21,35 +21,23 @@
             
             <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="story-characters">Story Characters</label>
-                    <!-- <input id="story-characters" type="text" formControlName="storyCharacters" /> -->
-                    <div class="vertical-section">
-                        @for(character of characterList; track character) {
-                            <div class="form-field">
-                                <input type="checkbox" id="character-checkbox-{{character.id}}" [value]="character.id" (change)="onCharacterChange($event, character)" [checked]="isCharacterInStory(character.firstName + ' ' + character.lastName)" />
-                                <button class="linked-character" [routerLink]="['/character', character.id]" type="button">
-                                    <label class="secondary-label">{{ character.firstName }} {{ character.lastName }}</label>
-                                </button>
-                            </div>
-                        }
-                    </div>
+                    <app-association-list
+                        [items]="getCharactersAssociationList()"
+                        [label]="'Story Characters'"
+                        [type]="'character'"
+                        (itemToggled)="onCharacterToggle($event)">
+                    </app-association-list>
                 </div>
             </div>
             
             <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
-                    <label class="primary-label" for="story-locations">Story Locations</label>
-                    <!-- <input id="story-locations" type="text" formControlName="storyLocations" /> -->
-                    <div class="vertical-section">
-                        @for(location of locationList; track location) {
-                            <div class="form-field">
-                                <input type="checkbox" id="location-checkbox-{{location.id}}" [value]="location.id" (change)="onLocationChange($event, location)" [checked]="isLocationInStory(location.name)" />
-                                <button class="linked-location" [routerLink]="['/location', location.id]" type="button">
-                                    <label class="secondary-label">{{ location.name }}</label>
-                                </button>
-                            </div>
-                        }
-                    </div>
+                    <app-association-list
+                        [items]="getLocationsAssociationList()"
+                        [label]="'Story Locations'"
+                        [type]="'location'"
+                        (itemToggled)="onLocationToggle($event)">
+                    </app-association-list>
                 </div>
             </div>
             
