--- a/src/app/components/thumbnail/story-thumbnail/story-thumbnail.html
+++ b/src/app/components/thumbnail/story-thumbnail/story-thumbnail.html
@@ -18,7 +18,7 @@
     
     <div class="thumbnail-description">
         @for ( paragraph of worldStory().description.split('\n'); track paragraph) {
-            <div>{{ paragraph }}</div>
+            <div class="thumbnail-paragraph">{{ paragraph }}</div>
         }
     </div>
     <div class="thumbnail-tag-container">
