--- a/src/app/components/thumbnail/thumbnail.css
+++ b/src/app/components/thumbnail/thumbnail.css
@@ -78,10 +78,14 @@
   font-size: x-small;
   color: var(--g1-color);
   line-height: 1.4;
-  white-space: nowrap;
+  white-space: normal;
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 100%;
+
+  .thumbnail-paragraph {
+    margin: 0 0 0.5rem 0;
+  }
 }
 
 .thumbnail-header {
