--- a/src/app/components/home-row/home-row.css
+++ b/src/app/components/home-row/home-row.css
@@ -1,6 +1,5 @@
 /* Home Row Component Styles */
 .home-row {
-    /* width: 100%; */
     display: flex;
     flex-direction: column;
 }
@@ -12,6 +11,7 @@
   margin-bottom: -5px;
   padding: 0;
   position: relative;
+  z-index: 1000;
 }
 
 .home-row-results {
