--- a/src/app/components/timeline/timeline/timeline.css
+++ b/src/app/components/timeline/timeline/timeline.css
@@ -6,14 +6,14 @@
 }
 
 .timeline-header {
+  font: italic;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  /* margin-bottom: 20px; */
-  padding: 0 20px;
+  margin-bottom: -10px;
+  padding: 0;
   position: relative;
-  z-index: 10;
+  z-index: 1000;
 }
 
 .timeline-title {
@@ -131,7 +131,7 @@
   margin: 0 auto;
   padding: 0;
   border: 2px solid var(--g1-color);
-  border-radius: 15px;
+  border-radius: 1px 1px 7px 7px;
   background-color: var(--g5-color);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
