--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,49 +1,54 @@
-<app-search-filter 
-  searchLabel="Search World"
-  searchPlaceholder="Search"
-  [filterConfig]="filterConfig"
-  [allCharacters]="allCharacters"
-  [allStories]="allStories"
-  [allLocations]="allLocations"
-  (filterChange)="onFilterChange($event)">
-</app-search-filter>
+<div class="home-page-container">
+  <aside class="side-menu">
+    <app-search-filter 
+      searchLabel="Search World"
+      searchPlaceholder="Search"
+      [filterConfig]="filterConfig"
+      [allCharacters]="allCharacters"
+      [allStories]="allStories"
+      [allLocations]="allLocations"
+      (filterChange)="onFilterChange($event)">
+    </app-search-filter>
+  </aside>
+  <article class="main-article">
+    <app-home-row
+      entityType="event"
+      title="Timeline"
+      routePath="/event"
+      [entities]="filteredEventList"
+      noResultsMessage="No events found. Try adjusting your search or add a new event."
+      (addElement)="addWorldElement($event)"
+      (tagClicked)="onTagClick($event)">
+    </app-home-row>
 
-<app-home-row
-  entityType="event"
-  title="Timeline"
-  routePath="/event"
-  [entities]="filteredEventList"
-  noResultsMessage="No events found. Try adjusting your search or add a new event."
-  (addElement)="addWorldElement($event)"
-  (tagClicked)="onTagClick($event)">
-</app-home-row>
+    <app-home-row
+    entityType="location"
+    title="World"
+    routePath="/location"
+    [entities]="filteredLocationList"
+    noResultsMessage="No locations found. Try adjusting your search or add a new location."
+    (addElement)="addWorldElement($event)"
+    (tagClicked)="onTagClick($event)">
+    </app-home-row>
 
-<app-home-row
-  entityType="location"
-  title="World"
-  routePath="/location"
-  [entities]="filteredLocationList"
-  noResultsMessage="No locations found. Try adjusting your search or add a new location."
-  (addElement)="addWorldElement($event)"
-  (tagClicked)="onTagClick($event)">
-</app-home-row>
+    <app-home-row
+    entityType="character"
+    title="Characters"
+    routePath="/character"
+    [entities]="filteredCharacterList"
+    noResultsMessage="No characters found. Try adjusting your search or add a new character."
+    (addElement)="addWorldElement($event)"
+    (tagClicked)="onTagClick($event)">
+    </app-home-row>
 
-<app-home-row
-  entityType="character"
-  title="Characters"
-  routePath="/character"
-  [entities]="filteredCharacterList"
-  noResultsMessage="No characters found. Try adjusting your search or add a new character."
-  (addElement)="addWorldElement($event)"
-  (tagClicked)="onTagClick($event)">
-</app-home-row>
-
-<app-home-row
-  entityType="story"
-  title="Stories"
-  routePath="/story"
-  [entities]="filteredStoryList"
-  noResultsMessage="No stories found. Try adjusting your search or add a new story."
-  (addElement)="addWorldElement($event)"
-  (tagClicked)="onTagClick($event)">
-</app-home-row>
+    <app-home-row
+    entityType="story"
+    title="Stories"
+    routePath="/story"
+    [entities]="filteredStoryList"
+    noResultsMessage="No stories found. Try adjusting your search or add a new story."
+    (addElement)="addWorldElement($event)"
+    (tagClicked)="onTagClick($event)">
+    </app-home-row>
+  </article>
+</div>
