--- a/src/app/pages/location-home/location-home.html
+++ b/src/app/pages/location-home/location-home.html
@@ -1,22 +1,24 @@
-<article>
-  <h1>World</h1>
-  
-  <app-search-filter 
-    searchLabel="Search locations"
-    searchPlaceholder="Search"
-    [filterConfig]="filterConfig"
-    [allCharacters]="allCharacters"
-    [allStories]="allStories"
-    (filterChange)="onFilterChange($event)">
-  </app-search-filter>
-  
-  <app-home-row
-    entityType="location"
-    title="World"
-    routePath="/locations"
-    [entities]="filteredLocationList"
-    noResultsMessage="No locations found. Try adjusting your search or add a new location."
-    (addElement)="addWorldLocation()"
-    (tagClicked)="onTagClicked($event)">
-  </app-home-row>
-</article>
+<h1>World</h1>
+<div class="page-container">
+  <aside class="side-menu">
+    <app-search-filter 
+      searchLabel="Search locations"
+      searchPlaceholder="Search"
+      [filterConfig]="filterConfig"
+      [allCharacters]="allCharacters"
+      [allStories]="allStories"
+      (filterChange)="onFilterChange($event)">
+    </app-search-filter>
+  </aside>
+  <article class="main-article">
+    <app-home-row
+      entityType="location"
+      title="World"
+      routePath="/locations"
+      [entities]="filteredLocationList"
+      noResultsMessage="No locations found. Try adjusting your search or add a new location."
+      (addElement)="addWorldLocation()"
+      (tagClicked)="onTagClicked($event)">
+    </app-home-row>
+  </article>
+</div>
